# qperf

./: .gitignore  AUTHORS.md  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
examples/: config-audio.ini  config-av.ini
include/: qperf.hpp  qperf_pub.hpp  subscriber_track_handler.hpp
scripts/: analyze_sub_logs.py  run_parallel_meetings.sh  run_parallel_subs.sh
src/: publisher_track_handler.cpp  qperf.cpp  qperf_meeting.cpp  qperf_pub.cc  qperf_pub.cpp  qperf_sub.cc  qperf_sub.cpp  subscriber_track_handler.cpp
templates/: config-audio.ini  config-av.ini  config.template.ini
